[package]
name = "message_flow"
version = "0.1.0"
edition = "2021"


[dependencies]
async-nats = "0.38.0"
futures = "0.3.31"
message_flow_drive = { version = "0.1.0" , path = "drive" }
tokio = {version = "1.42.0" , features = ["full"]}

[dev-dependencies]
serde = "1.0.217"
serde_json = "1.0.135"

[features]
nats = []

[workspace]
message_flow_drive = { path = "drive" }

