[package]
name = "message_flow"
version = "0.1.0"
edition = "2024"


[dependencies]
async-nats = "0.38.0"
futures = "0.3.31"
message_flow_drive = { version = "0.1.0" , path = "drive" }
tokio = {version = "1.42.0" , features = ["full"]}
serde = "1.0.217"
serde_json = "1.0.135"
async-trait = "0.1.85"
log = "0.4.27"

[dev-dependencies]
async-trait = "0.1.85"
serde = "1.0.217"
serde_json = "1.0.135"

[features]
default = ["nats" , "debug" , "info" , "warn" , "error" , "trace"]

nats = []

log = []
debug = []
info = []
warn = []
error = []
trace = []


[workspace]
message_flow_drive = { path = "drive" }

